home page fix margins on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,3 +19,8 @@ a {
   text-decoration: none;
   color: black;
 }
+
+.slick-prev,
+.slick-next {
+  display: none !important;
+}
